--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -201,6 +201,8 @@ a.enlace2:focus{
 	filter:alpha(opacity=80);		
 	outline: 0;
 	text-decoration:none;
+	
+	 -webkit-transform: scale(1.1); 
 
 }
 
@@ -230,6 +232,7 @@ a.imagenboton,
 a.imagenboton2{
 	opacity: 1.0;
 	filter:alpha(opacity=100);
+	-webkit-transition: all .2s ease-in-out;
 
 }
 
@@ -240,7 +243,8 @@ a.imagenboton2:hover,
 a.imagenboton2:active,
 a.imagenboton2:focus{
 	opacity: 0.90;
-	filter:alpha(opacity=90);	
+	filter:alpha(opacity=90);
+	 -webkit-transform: scale(1.1); 	
 }
 
 ul{
