--- a/alquilook/css/bootstrap.css
+++ b/alquilook/css/bootstrap.css
@@ -4628,7 +4628,6 @@ a.thumbnail.active {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #fff;
-  border: 1px solid #c8c8c8;
 }
 .list-group-item:first-child {
   border-top-left-radius: 0;
@@ -4772,10 +4771,6 @@ a.list-group-item-danger.active:focus {
 .panel {
   margin-bottom: 10px;
   background-color: #fff;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 .panel-body {
   padding: 15px;
@@ -4784,7 +4779,7 @@ a.list-group-item-danger.active:focus {
   margin-bottom: 0;
 }
 .panel > .list-group .list-group-item {
-  border-width: 1px 0;
+  border-width: 0;
   border-radius: 0;
 }
 .panel > .list-group .list-group-item:first-child {
@@ -4794,12 +4789,12 @@ a.list-group-item-danger.active:focus {
   border-bottom: 0;
 }
 .panel > .list-group:first-child .list-group-item:first-child {
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 .panel > .list-group:last-child .list-group-item:last-child {
-  border-bottom-right-radius: 3px;
-  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 .panel-heading + .list-group .list-group-item:first-child {
   border-top-width: 0;
@@ -4850,7 +4845,6 @@ a.list-group-item-danger.active:focus {
 }
 .panel > .panel-body + .table,
 .panel > .panel-body + .table-responsive {
-  border-top: 1px solid #ddd;
 }
 .panel > .table > tbody:first-child > tr:first-child th,
 .panel > .table > tbody:first-child > tr:first-child td {
@@ -4922,7 +4916,6 @@ a.list-group-item-danger.active:focus {
 }
 .panel-heading {
   padding: 10px 15px;
-  border-bottom: 1px solid transparent;
 }
 .panel-heading > .dropdown .dropdown-toggle {
   color: inherit;
@@ -4953,7 +4946,6 @@ a.list-group-item-danger.active:focus {
   border-bottom: 0;
 }
 .panel-group .panel-heading + .panel-collapse .panel-body {
-  border-top: 1px solid #ddd;
 }
 .panel-group .panel-footer {
   border-top: 0;
