--- a/alquilook/css/responsive-slider-parallax.css
+++ b/alquilook/css/responsive-slider-parallax.css
@@ -21,13 +21,7 @@
   display: inline-block;
   width: 100%;
 }
-.responsive-slider-parallax .slides-container ul li .slide-body {
-  display: inline-block;
-  position: relative;
-  width: 100%;
-  height: 380px;
-  font-size: 14px;
-}
+
 .responsive-slider-parallax .slides-container ul li .slide-body img {
   max-width: 100%;
 }
@@ -41,124 +35,227 @@
 .responsive-slider-parallax .slides-container ul li .slide-body .caption {
   position: absolute;
   color: #fff;
-  text-shadow: 0px 1px 0px #000000;
 }
 .responsive-slider-parallax .slides-container ul li .slide-body .caption.header {
-  top: 28%;
-  left: 8%;
+	z-index:10;	
+    top: 28%;
+    left: 8%;
 }
 .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
-  font-size: 40px;
-  background: #FF6600;
+  font-size: 24px;
   padding: 0 3px 0 3px;
 }
 .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
-  font-size: 35px;
+  font-size: 30px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
-    font-size: 25px;
-    line-height: 25px;
-  }
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
-    font-size: 20px;
-  }
-}
+
+
+
+
+
+/* -480px */
+
 @media (max-width: 480px) {
+  .slider{
+		font-size:18px;
+		line-height: 18px;
+   }	
+	
   .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 14px;
   }
   .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
     font-size: 14px;
   }
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
-  bottom: -8px;
-  right: -20px;
-  font-weight: bold;
-  font-family: 'Cuprum', sans-serif;
-  color: #000000;
-  text-shadow: 0px 1px 0px #ffffff;
-  padding: 0 3px 0 3px;
-  background: #ffffff;
-}
-@media (min-width: 481px) and (max-width: 767px) {
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
-    font-size: 11px;
-    line-height: 11px;
-    bottom: 0px;
-    right: -10px;
-  }
-}
-@media (max-width: 480px) {
+	
   .responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
     font-size: 10px;
     line-height: 10px;
     bottom: 0px;
     right: 0;
+  }  
+    .responsive-slider-parallax .slides-container ul li .slide-body {
+    height: 150px;
   }
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-bigscreen {
-  top: 20%;
-  left: 40%;
-  width:40%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-bigscreen img {
-  max-width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-smallscreen {
-  top: 45%;
-  left: 75%;
-  width: 20%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-smallscreen img {
-  max-width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-bootstrap {
-  top: 56%;
-  right: 12%;
-  width: 11%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-bootstrap img {
-  max-width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-twitter {
-  top: 20%;
-  right: 12%;
-  width: 11%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-twitter img {
-  max-width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-jquery {
-  top: 55%;
-  right: 12%;
-  width: 33%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-jquery img {
-  max-width: 100%;
-}
-@media (min-width: 1200px) {
-  .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 480px;
+   .responsive-slider-parallax .slider-control.left,
+  .responsive-slider-parallax .slider-control.right {
+    display: none;
   }
+  
 }
+
+/* -480px */
+
+
+/* 481px a 767px */
+@media (min-width: 481px) and (max-width: 767px) {
+	
+  .slider{
+	font-size:30px;
+	line-height: 25px;
+  }
+  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
+    font-size: 16px;
+    line-height: 16px;
+  }
+  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
+    font-size: 20px;
+  }
+    .responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
+    font-size: 11px;
+    line-height: 11px;
+    bottom: 0px;
+    right: -10px;
+  }
+    .responsive-slider-parallax .slides-container ul li .slide-body {
+    height: 220px;
+  }
+  
+}
+/* 481px a 767px */
+
+
+/* 768px a 979px */
 @media (min-width: 768px) and (max-width: 979px) {
+  
+  .slider{
+	font-size:30px;
+	line-height: 30px;
+  }	
+	
+  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
+    font-size: 21px;
+    line-height: 21px;
+  }
+  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
+    font-size: 14px;
+  }	
+	
   .responsive-slider-parallax .slides-container ul li .slide-body {
     height: 300px;
   }
+
 }
-@media (min-width: 481px) and (max-width: 767px) {
+/* 768px a 979px */
+
+
+/* 980px a 1279px */
+@media (min-width: 979px) and (max-width: 1279px) {
+	
   .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 220px;
+    height: 400px;
   }
+  
 }
-@media (max-width: 480px) {
+/* 980px a 1279px */
+
+
+/* +1280px */
+@media (min-width: 1280px){
+  
+  .slider{
+	font-size:50px;
+	line-height: 60px;
+  }
   .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 150px;
+    height: 400px;
   }
+  .responsive-slider-parallax .slides-container ul li .slide-body {
+	  display: inline-block;
+	  position: relative;
+	  width: 100%;
+	  height: 400px;
+  }
+
 }
+/* +1280px */
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
+  bottom: -8px;
+  right: -20px;
+  color: #000000;
+  padding: 0 3px 0 3px;
+  background: #ffffff;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 {
+  top: 20%;
+  left:60%;
+  width:100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 {
+  top: 7%;
+  left: 55%;
+  width: 100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 {
+  top: 18%;
+  left: 60%;
+  width: 100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 {
+  top: 10%;
+  left: 42%;
+  width: 100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 {
+  top: 18%;
+  left: 60%;
+  width: 100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 {
+  top: 14%;
+  left: 50%;
+  width: 100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 {
+  top: 18%;
+  left: 52%;
+  width: 100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 {
+  top: 5%;
+  left: 47%;
+  width: 100%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 img {
+  max-width: 100%;
+}
+
+
 .responsive-slider-parallax .slider-control {
   position: absolute;
   font-size: 40px;
@@ -185,12 +282,7 @@
   text-decoration: none;
   opacity: 1;
 }
-@media (max-width: 480px) {
-  .responsive-slider-parallax .slider-control.left,
-  .responsive-slider-parallax .slider-control.right {
-    display: none;
-  }
-}
+
 .responsive-slider-parallax .pages {
   position: absolute;
   bottom: 0;
