--- a/alquilook/css/alquilook.css
+++ b/alquilook/css/alquilook.css
@@ -10,7 +10,7 @@ by Museographia Espacios Expositivos
 */
 
 
-/*--------------------------------------------------------------------------------------------------------------------------Textos--------------------*/
+/*  Textos  */
 
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:100);
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400);
@@ -149,7 +149,7 @@ p.mobiliario{
 
 
 
-/*---------------------------------------------------------------------------------------------------------------------------------------------------------Links--------------------*/
+/*  Links  */
 a.enlace{
     color:#e72e45; /* blooming magenta */
    	opacity: 1.0;
@@ -272,7 +272,7 @@ ul{
 	list-style:none;
 }
 
-/*---------------------------------------------------------------------------------------------------------------------------------------------------------Colores--------------------*/
+/*  Colores  */
 .red { background-color: #e74c3c; color:#FFFFFF;}
 .red2 {  background-color: #c0392b; color:#FFFFFF;}
 .blue {  background-color: #3498db; color:#FFFFFF;}
@@ -324,7 +324,7 @@ ul{
 	color: #999999;
 }
 
-/*--------------------------------------------------------------------------------------------------------------------------------------------------------Otros--------------------*/
+/*  Otros  */
 
 
 body,html{
@@ -589,10 +589,7 @@ body {
 }
 
 
-/*-----------------------------------------------------------------------------------------------------------------------------------------
- * -----------------------------------------------------------------------------------------------------------------------------------------
- * -----------------------------------------------------------------------------------------------------------------------------------------
- * ----------------------------------------------------------------------------------------------------------------------Móviles-----------*/
+/*     Móviles     */
 
 @media (max-width: 767px) {
 
