--- a/alquilook/css/responsive-slider-parallax.css
+++ b/alquilook/css/responsive-slider-parallax.css
@@ -22,9 +22,16 @@
   width: 100%;
 }
 
+.responsive-slider-parallax .slides-container ul li .slide-body {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+ 
 .responsive-slider-parallax .slides-container ul li .slide-body img {
   max-width: 100%;
 }
+
 .responsive-slider-parallax .slides-container ul li .slide-body .container {
   height: 100%;
 }
@@ -36,141 +43,12 @@
   position: absolute;
   color: #fff;
 }
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.header {
-	z-index:10;	
-    top: 28%;
-    left: 8%;
+
+.responsive-slider-parallax .slider-control.left,
+.responsive-slider-parallax .slider-control.right {
+  display: none !important;
 }
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
-  font-size: 24px;
-  padding: 0 3px 0 3px;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
-  font-size: 30px;
-}
-
-
-
-
-
-/* -480px */
-
-@media (max-width: 480px) {
-  .slider{
-		font-size:18px;
-		line-height: 18px;
-   }	
-	
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
-    font-size: 14px;
-    line-height: 14px;
-  }
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
-    font-size: 14px;
-  }
-	
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
-    font-size: 10px;
-    line-height: 10px;
-    bottom: 0px;
-    right: 0;
-  }  
-    .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 150px;
-  }
-   .responsive-slider-parallax .slider-control.left,
-  .responsive-slider-parallax .slider-control.right {
-    display: none;
-  }
   
-}
-
-/* -480px */
-
-
-/* 481px a 767px */
-@media (min-width: 481px) and (max-width: 767px) {
-	
-  .slider{
-	font-size:30px;
-	line-height: 25px;
-  }
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
-    font-size: 16px;
-    line-height: 16px;
-  }
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
-    font-size: 20px;
-  }
-    .responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
-    font-size: 11px;
-    line-height: 11px;
-    bottom: 0px;
-    right: -10px;
-  }
-    .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 220px;
-  }
-  
-}
-/* 481px a 767px */
-
-
-/* 768px a 979px */
-@media (min-width: 768px) and (max-width: 979px) {
-  
-  .slider{
-	font-size:30px;
-	line-height: 30px;
-  }	
-	
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
-    font-size: 21px;
-    line-height: 21px;
-  }
-  .responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
-    font-size: 14px;
-  }	
-	
-  .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 300px;
-  }
-
-}
-/* 768px a 979px */
-
-
-/* 980px a 1279px */
-@media (min-width: 979px) and (max-width: 1279px) {
-	
-  .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 400px;
-  }
-  
-}
-/* 980px a 1279px */
-
-
-/* +1280px */
-@media (min-width: 1280px){
-  
-  .slider{
-	font-size:50px;
-	line-height: 60px;
-  }
-  .responsive-slider-parallax .slides-container ul li .slide-body {
-    height: 400px;
-  }
-  .responsive-slider-parallax .slides-container ul li .slide-body {
-	  display: inline-block;
-	  position: relative;
-	  width: 100%;
-	  height: 400px;
-  }
-
-}
-/* +1280px */
-
 
 .responsive-slider-parallax .slides-container ul li .slide-body .caption.sub {
   bottom: -8px;
@@ -178,81 +56,6 @@
   color: #000000;
   padding: 0 3px 0 3px;
   background: #ffffff;
-}
-
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 {
-  top: 20%;
-  left:60%;
-  width:100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 img {
-  max-width: 100%;
-}
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 {
-  top: 7%;
-  left: 55%;
-  width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 img {
-  max-width: 100%;
-}
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 {
-  top: 18%;
-  left: 60%;
-  width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 img {
-  max-width: 100%;
-}
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 {
-  top: 10%;
-  left: 42%;
-  width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 img {
-  max-width: 100%;
-}
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 {
-  top: 18%;
-  left: 60%;
-  width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 img {
-  max-width: 100%;
-}
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 {
-  top: 14%;
-  left: 50%;
-  width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 img {
-  max-width: 100%;
-}
-
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 {
-  top: 18%;
-  left: 52%;
-  width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 img {
-  max-width: 100%;
-}
-
-
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 {
-  top: 5%;
-  left: 47%;
-  width: 100%;
-}
-.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 img {
-  max-width: 100%;
 }
 
 
@@ -302,3 +105,546 @@
 .responsive-slider-parallax .pages .page.active {
   opacity: 1;
 }
+
+
+
+/* -480px */
+
+@media (max-width: 480px) {
+
+ .slider{
+	font-size:21px;
+	line-height: 21px;
+  }		
+	
+  .responsive-slider-parallax .slides-container ul li .slide-body {
+    height: 250px;
+  }
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header {
+	z-index:10;	
+    top: 18%;
+    left: 10%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
+  font-size: 16px;
+  line-height: 16px;
+  padding: 0 3px 0 3px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
+  font-size: 18px;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 {
+  display: none !important;
+  top: 1%;
+  left:60%;
+  width:200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 {
+	display: none !important;
+  top: 1%;
+  left: 56%;
+  width:250px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 {
+	display: none !important;
+  top: 7%;
+  left: 60%;
+  width: 225px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 {
+	display: none !important;
+  top: 5%;
+  left: 42%;
+  width: 175px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 {
+	display: none !important;
+  top: 7%;
+  left: 60%;
+  width: 225px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 {
+	display: none !important;
+  top: 9%;
+  left: 52%;
+  width:175px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 {
+	display: none !important;
+  top: 14%;
+  left: 52%;
+  width: 200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 {
+	display: none !important;
+  top: 5%;
+  left: 49%;
+  width:200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 img {
+	display: none !important;
+  max-width: 100%;
+}
+
+}
+
+/* -480px */
+
+
+/* 481px a 767px */
+@media (min-width: 481px) and (max-width: 767px) {
+	
+ .slider{
+	font-size:21px;
+	line-height: 21px;
+  }		
+	
+  .responsive-slider-parallax .slides-container ul li .slide-body {
+    height: 200px;
+  }
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header {
+	z-index:10;	
+    top: 14%;
+    left: 10%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
+  font-size: 16px;
+  line-height: 16px;
+  padding: 0 3px 0 3px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
+  font-size: 18px;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 {
+  top: 1%;
+  left:60%;
+  width:200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 {
+  top: 1%;
+  left: 56%;
+  width:250px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 {
+  top: 7%;
+  left: 60%;
+  width: 225px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 {
+  top: 5%;
+  left: 42%;
+  width: 175px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 {
+  top: 7%;
+  left: 60%;
+  width: 225px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 {
+  top: 9%;
+  left: 52%;
+  width:175px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 {
+  top: 14%;
+  left: 52%;
+  width: 200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 {
+  top: 5%;
+  left: 49%;
+  width:200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 img {
+  max-width: 100%;
+}
+
+  
+}
+/* 481px a 767px */
+
+
+/* 768px a 979px */
+@media (min-width: 768px) and (max-width: 979px) {
+  
+  .slider{
+	font-size:30px;
+	line-height: 30px;
+  }		
+	
+  .responsive-slider-parallax .slides-container ul li .slide-body {
+    height: 250px;
+  }
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header {
+	z-index:10;	
+    top: 18%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
+  font-size: 18px;
+  line-height: 18px;
+  padding: 0 3px 0 3px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
+  font-size: 18px;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 {
+  top: 1%;
+  left:60%;
+  width:250px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 {
+  top: 1%;
+  left: 56%;
+  width:300px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 {
+  top: 7%;
+  left: 60%;
+  width: 275px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 {
+  top: 5%;
+  left: 42%;
+  width: 200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 {
+  top: 7%;
+  left: 60%;
+  width: 275px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 {
+  top: 9%;
+  left: 52%;
+  width:200px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 {
+  top: 14%;
+  left: 52%;
+  width: 250px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 {
+  top: 5%;
+  left: 49%;
+  width:250px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 img {
+  max-width: 100%;
+}
+
+}
+/* 768px a 979px */
+
+
+/* 980px a 1279px */
+@media (min-width: 979px) and (max-width: 1279px) {
+	
+  .slider{
+	font-size:35px;
+	line-height: 30px;
+  }		
+	
+  .responsive-slider-parallax .slides-container ul li .slide-body {
+    height: 300px;
+  }
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header {
+	z-index:10;	
+    top: 20%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
+  font-size: 20px;
+  padding: 0 3px 0 3px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
+  font-size: 20px;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 {
+  top: 1%;
+  left:60%;
+  width:325px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 {
+  top: 1%;
+  left: 59%;
+  width:375px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 {
+  top: 7%;
+  left: 60%;
+  width: 325px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 {
+  top: 5%;
+  left: 42%;
+  width: 250px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 {
+  top: 7%;
+  left: 60%;
+  width: 325px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 {
+  top: 9%;
+  left: 52%;
+  width:250px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 {
+  top: 19%;
+  left: 52%;
+  width: 280px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 {
+  top: 5%;
+  left: 48%;
+  width: 300px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 img {
+  max-width: 100%;
+}
+
+}
+/* 980px a 1279px */
+
+
+/* 1280px a 1920px */
+@media (min-width: 1280px){
+  
+  .slider{
+	font-size:50px;
+	line-height: 60px;
+  }
+  .responsive-slider-parallax .slides-container ul li .slide-body {
+    height: 400px;
+  }
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header {
+	z-index:10;	
+    top: 20%;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 {
+  font-size: 24px;
+  padding: 0 3px 0 3px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.header h2 i {
+  font-size: 30px;
+}
+ 
+  .responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 {
+  top: 3%;
+  left:60%;
+  width:390px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-1 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 {
+  top: 1%;
+  left: 57%;
+  width: 475px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-2 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 {
+  top: 18%;
+  left: 60%;
+  width: 390px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-3 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 {
+  top: 10%;
+  left: 42%;
+  width: 280px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-4 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 {
+  top: 18%;
+  left: 60%;
+  width: 390px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-5 img {
+  max-width: 100%;
+}
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 {
+  top: 14%;
+  left: 50%;
+  width: 350px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-6 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 {
+  top: 18%;
+  left: 52%;
+  width: 380px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-7 img {
+  max-width: 100%;
+}
+
+
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 {
+  top: 5%;
+  left: 49%;
+  width: 375px;
+}
+.responsive-slider-parallax .slides-container ul li .slide-body .caption.img-8 img {
+  max-width: 100%;
+}
+
+}
+/* 1280px a 1920px */
+
+
+
+
+
